# svetit

src/back/project/: CMakeLists.txt
src/back/project/configs/: static_config.yaml
src/back/project/src/: main.cpp
src/back/project/src/api/: cc-di-list.cpp  cc-di-list.hpp  cc-di.cpp  cc-di.hpp  cc-mode-type-list.cpp  cc-mode-type-list.hpp  cc-mode-type.cpp  cc-mode-type.hpp  cc-param-list.cpp  cc-param-list.hpp  cc-param.cpp  cc-param.hpp  cc-status-category-list.cpp  cc-status-category-list.hpp  cc-status-category.cpp  cc-status-category.hpp  cc-status-type-list.cpp  cc-status-type-list.hpp  cc-status-type.cpp  cc-status-type.hpp  cc-type-di-type-list.cpp  cc-type-di-type-list.hpp  cc-type-di-type.cpp  cc-type-di-type.hpp  cc-type-list.cpp  cc-type-list.hpp  cc-type-param-list.cpp  cc-type-param-list.hpp  cc-type-param.cpp  cc-type-param.hpp  cc-type.cpp  cc-type.hpp  code-list.cpp  code-list.hpp  code.cpp  code.hpp  control-circuit-list.cpp  control-circuit-list.hpp  control-circuit.cpp  control-circuit.hpp  (+62 more)
src/back/project/tests/: test_basic.py
src/back/space/tests/: conftest.py  requirements.txt  test_basic.py
src/back/space/tests/static/: test_data.sql
